# GitJournal

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AppImageBuilder.yml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  analysis_options.yaml  build.yaml  changelog.yml  flutterw  l10n.yaml  launch_android.sh  melos.yaml  pubspec.yaml  screenshots.yaml
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  ios.yml  linux.yml
.reuse/: dep5
LICENSES/: Apache-2.0.txt  MIT.txt
android/: .gitignore  build.gradle  google-play-api-key.json  gradle.properties  gradlew  gradlew.bat  key.properties  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  git.c  keygen.c  native-lib.cpp
benchmark/: strip_markdown.dart
docs/: android-dev-build.md  bump-flutter.md  git_hosts.md  ios-sentry-symbols.md  ios.md  linux.md  qa.md  release-checklist.md
fonts/: Lato-Regular.ttf.license  RobotoMono-Regular.ttf.license
git_test/: git.c  gitjournal.c  gitjournal.h  make.sh
gj_common/: .dockerignore  .gitignore  Dockerfile  Makefile  build-libgit2.sh  common.c  gitjournal.c  gitjournal.h  install_infer.sh  keygen.c  test.c
go/: go.mod  go.sum  hover.yaml
ios/: .gitignore  Gemfile  GoogleService-Info.plist  Podfile
lib/: .env.dart  analytics.dart  analytics_exp.dart  app.dart  app_localizations_context.dart  app_router.dart  app_settings.dart  appstate.dart  change_notifiers.dart  datetime_utils.dart  error_reporting.dart  features.dart  file_storage.dart  gitapp.dart  iap.dart  journal_list.dart  l10n.dart  main.dart  main.widgetbook.dart  main2.dart  main_autocomplete.dart  main_dashbook.dart  main_dns.dart  main_features.dart  main_graph.dart  main_webview.dart  main_zeroconf.dart  monarch.dart  monarch_localizations_delegate.dart  note.dart  note_editor.dart  note_fileName.dart  note_folder.dart  note_viewer.dart  notes_repository.dart  oauthapp.dart  purchase_manager.dart  repository.dart  repository_manager.dart  screens.dart  (+6 more)
linux/: .gitignore  CMakeLists.txt  main.cc  my_application.cc  my_application.h
macos/: .gitignore  Podfile  gon.hcl
protos/: builders.proto  core.proto  shared_preferences.proto
scripts/: add_ios_keys.sh  add_macos_keys.sh  add_translations_license.sh  android_crashlytics.sh  app_notarizer.sh  build.sh  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  convert_arb_keys.dart  decrypt_secrets.sh  download_ios_frameworks.sh  download_translations.sh  finalize_screenshots.sh  flutter_run.sh  install_latest_artifact.sh  install_ndk_libs.sh  ios_install_flutter.sh  launch_android.sh  print_added_logs.sh  record_screen.sh  reload.sh  reload_run_app.sh  setup_env.dart  test.sh  test_coverage.sh  upload_translation_en.sh  version.sh  watch_test.sh
secrets/: env.json
(+611 files in other folders)
